Correlation Q3 still pending - moving on to CHI SQ Qs

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -694,7 +694,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
@@ -1519,17 +1521,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.24752182436772552, 8.277097497778666e-99)"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# alternately\n",
+    "## Does tenure correlate with... Total charges?? \n",
+    "corr, p = stats.pearsonr(x, y1)\n",
+    "corr, p"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8264362509431538, 0.0)"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# alternately\n",
+    "## Does tenure correlate with... Total charges?? \n",
+    "corr, p = stats.pearsonr(x, y2)\n",
+    "corr, p"
+   ]
   },
   {
    "cell_type": "code",
@@ -1544,8 +1578,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using longer method from curriculum/class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    # PRESET VALUES #\n",
-    "n = df.shape[0]     # number of observations\n",
+    "n = telco.shape[0]     # number of observations\n",
     "degf = n - 2        # degrees of freedom: the # of values in the final calculation of a statistic that are free to vary.\n",
     "conf_interval = .95 # desired confidence interval\n",
     "α = 1 - conf_interval"
@@ -1553,13 +1596,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2475218243677255"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 'Tenure for Start Date'\n",
-    "# monthly_charges\n",
-    "# total_charges\n",
+    "# checks P-r for Y1\n",
     "\n",
     "x = telco['Tenure for Start Date']\n",
     "\n",
@@ -1580,10 +1632,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8264362509431538"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "  # checks P-r for Y2\n",
     "def stdev(x):\n",
     "    variance = ((x - x.mean()) ** 2).sum() / n\n",
     "    return sqrt(variance)\n",
@@ -1601,9 +1665,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.4367843613106"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = (r_xy1 * sqrt(n - 2)) / sqrt(1 - r_xy1**2)\n",
     "t"
@@ -1611,9 +1686,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123.16711265485748"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t2 = (r_xy2 * sqrt(n - 2)) / sqrt(1 - r_xy2**2)\n",
     "t2"
@@ -1621,9 +1707,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.277097497773075e-99"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = stats.t.sf(t, df=degf) * 2 # *2 for a two-tailed test\n",
     "p"
@@ -1631,28 +1728,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "p2 = stats.t2.sf(t2, df=degf) * 2 # *2 for a two-tailed test\n",
+    "p2 = stats.t.sf(t2, df=degf) * 2 # *2 for a two-tailed test\n",
     "p2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p < α"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p2 < α"
    ]
@@ -1663,17 +1793,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Does tenure correlate with... Total charges?? \n",
-    "corr, p = stats.pearsonr(x, y2)\n",
-    "corr, p\n"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -1698,9 +1817,9 @@
     "import env\n",
     "\n",
     "url = f'mysql+pymysql://{env.user}:{env.password}@{env.host}/employees'\n",
-    "query = 'SELECT * FROM salaries WHERE to_date > NOW()'\n",
-    "salaries = pd.read_sql(query, url)\n",
-    "salaries"
+    "#query = 'SELECT * FROM salaries WHERE to_date > NOW()'\n",
+    "#salaries = pd.read_sql(query, url)\n",
+    "#salaries"
    ]
   },
   {
@@ -1947,13 +2066,19 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Kevin's SQL Code solution\n",
-    "employees_url = get_db_url(user, password, host, database='employees')\n",
+    "# Kevin's SQL Code solution for Ex 2\n",
+    "\n",
+    "import env\n",
+    "#url = f'mysql+pymysql://{env.user}:{env.password}@{env.host}/employees'\n",
+    "#query = 'SELECT * FROM salaries WHERE to_date > NOW()'\n",
+    "#salaries = pd.read_sql(query, url)\n",
+    "#salaries\n",
+    "\n",
+    "employees_url = f'mysql+pymysql://{env.user}:{env.password}@{env.host}/employees'\n",
+    "#employees_url = get_db_url(user, password, host, database='employees')\n",
     "employees = pd.read_sql('''SELECT\n",
     "    e.*,\n",
     "    datediff('2002-09-30', e.hire_date) tenure,\n",
@@ -2001,6 +2126,335 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " shaping and filtering tables\n",
+    "    removing unessary ones\n",
+    "    adding new ones like length_of_employment(len_emp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 Use the employees database.\n",
+    "- Is there a relationship between how long an employee\n",
+    "    has been with the company and their salary?\n",
+    "- Is there a relationship between how long an employee \n",
+    "    has been with the company and the number of titles they have had?\n",
+    "    \n",
+    "# hint, use datedif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing unessessaries\n",
+    "  # ex fm DATAFRAMES CURRICULUM df.drop(columns=['english', 'reading']).rename(columns={'name': 'student'})\n",
+    "employees_redux = employees.drop(columns=['gender','birth_date','title_from'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128232"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employees_redux[employees_redux.titles > 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "employees\n",
+    "\n",
+    "emp_no\tint(11)\tNO\tPRI\tNULL\t\n",
+    "birth_date\tdate\tNO\t\tNULL\t\n",
+    "first_name\tvarchar(14)\tNO\t\tNULL\t\n",
+    "last_name\tvarchar(16)\tNO\t\tNULL\t\n",
+    "gender\tenum('M','F')\tNO\t\tNULL\t\n",
+    "hire_date\tdate\tNO\t\tNULL\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM employees\n",
+    "LIMIT 5\n",
+    "\n",
+    "10001\t1953-09-02\tGeorgi\tFacello\tM\t1986-06-26\n",
+    "10002\t1964-06-02\tBezalel\tSimmel\tF\t1985-11-21\n",
+    "10003\t1959-12-03\tParto\tBamford\tM\t1986-08-28\n",
+    "10004\t1954-05-01\tChirstian\tKoblick\tM\t1986-12-01\n",
+    "10005\t1955-01-21\tKyoichi\tMaliniak\tM\t1989-09-12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "salaries\n",
+    "emp_no\tint(11)\tNO\tPRI\tNULL\t\n",
+    "salary\tint(11)\tNO\t\tNULL\t\n",
+    "from_date\tdate\tNO\tPRI\tNULL\t\n",
+    "to_date\tdate\tNO\t\tNULL\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM salaries\n",
+    "LIMIT 5\n",
+    "\n",
+    "10001\t60117\t1986-06-26\t1987-06-26\n",
+    "10001\t62102\t1987-06-26\t1988-06-25\n",
+    "10001\t66074\t1988-06-25\t1989-06-25\n",
+    "10001\t66596\t1989-06-25\t1990-06-25\n",
+    "10001\t66961\t1990-06-25\t1991-06-25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT to_date\n",
+    "FROM salaries\n",
+    "GROUP BY to_date DESC;\n",
+    "LIMIT 20\n",
+    "\n",
+    "9999-01-01\n",
+    "2002-08-01\n",
+    "2002-07-31\n",
+    "2002-07-30\n",
+    "2002-07-29\n",
+    "2002-07-28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "titles\n",
+    "emp_no\tint(11)\tNO\tPRI\tNULL\t\n",
+    "title\tvarchar(50)\tNO\tPRI\tNULL\t\n",
+    "from_date\tdate\tNO\tPRI\tNULL\t\n",
+    "to_date\tdate\tYES\t\tNULL\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM titles\n",
+    "LIMIT 5\n",
+    "\n",
+    "10001\tSenior Engineer\t1986-06-26\t9999-01-01\n",
+    "10002\tStaff\t1996-08-03\t9999-01-01\n",
+    "10003\tSenior Engineer\t1995-12-03\t9999-01-01\n",
+    "10004\tEngineer\t1986-12-01\t1995-12-01\n",
+    "10004\tSenior Engineer\t1995-12-01\t9999-01-01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT to_date\n",
+    "FROM titles\n",
+    "GROUP BY to_date DESC;\n",
+    "LIMIT 20\n",
+    "\n",
+    "9999-01-01\n",
+    "2002-08-01\n",
+    "2002-07-31\n",
+    "2002-07-30\n",
+    "2002-07-29\n",
+    "2002-07-28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "current_dept_emp\n",
+    "emp_no\tint(11)\tNO\t\tNULL\t\n",
+    "dept_no\tchar(4)\tNO\t\tNULL\t\n",
+    "from_date\tdate\tYES\t\tNULL\t\n",
+    "to_date\tdate\tYES\t\tNULL\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM current_dept_emp\n",
+    "LIMIT 5\n",
+    "\n",
+    "10001\td005\t1986-06-26\t9999-01-01\n",
+    "10002\td007\t1996-08-03\t9999-01-01\n",
+    "10003\td004\t1995-12-03\t9999-01-01\n",
+    "10004\td004\t1986-12-01\t9999-01-01\n",
+    "10005\td003\t1989-09-12\t9999-01-01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT from_date\n",
+    "FROM current_dept_emp\n",
+    "GROUP BY from_date\n",
+    "LIMIT 5;\n",
+    "\n",
+    "1985-01-01\n",
+    "1985-01-14\n",
+    "1985-02-01\n",
+    "1985-02-02\n",
+    "1985-02-03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dept_manager\n",
+    "emp_no\tint(11)\tNO\tPRI\tNULL\t\n",
+    "dept_no\tchar(4)\tNO\tPRI\tNULL\t\n",
+    "from_date\tdate\tNO\t\tNULL\t\n",
+    "to_date\tdate\tNO\t\tNULL\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT *\n",
+    "FROM dept_manager\n",
+    "LIMIT 5\n",
+    "\n",
+    "110022\td001\t1985-01-01\t1991-10-01\n",
+    "110039\td001\t1991-10-01\t9999-01-01\n",
+    "110085\td002\t1985-01-01\t1989-12-17\n",
+    "110114\td002\t1989-12-17\t9999-01-01\n",
+    "110183\td003\t1985-01-01\t1992-03-21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sql pull of all 3 Tables without any extra filtering\n",
+    "import env\n",
+    "\n",
+    "employees_url = f'mysql+pymysql://{env.user}:{env.password}@{env.host}/employees'\n",
+    "\n",
+    "employees_1 = pd.read_sql('''SELECT\n",
+    "    e.*,\n",
+    "    t.title,\n",
+    "    t.from_date title_from,\n",
+    "    et.titles,\n",
+    "    s.salary,\n",
+    "    s.from_date salary_from,\n",
+    "    es.salaries\n",
+    "FROM\n",
+    "    employees e\n",
+    "JOIN \n",
+    "    titles t \n",
+    "    USING(emp_no)\n",
+    "JOIN \n",
+    "    salaries s \n",
+    "    USING(emp_no)\n",
+    "JOIN\n",
+    "    (SELECT \n",
+    "        emp_no,\n",
+    "        count(*) titles\n",
+    "    FROM\n",
+    "        titles\n",
+    "    GROUP BY\n",
+    "        emp_no) et\n",
+    "    USING(emp_no)\n",
+    "JOIN\n",
+    "    (SELECT \n",
+    "        emp_no,\n",
+    "        count(*) salaries\n",
+    "    FROM\n",
+    "        salaries\n",
+    "    GROUP BY\n",
+    "        emp_no) es\n",
+    "    USING(emp_no);\n",
+    "''', employees_url)\n",
+    "print(employees_1.shape)\n",
+    "print(employees_1.dtypes)\n",
+    "employees_1.sample(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2029,6 +2483,20 @@
     "    Uses a Macbook\t        49\t                20\n",
     "    Doesn't Use A Macbook\t 1\t                30"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
